  fminimum_mag, fminimum_mag_num and corresponding functions for float,
  long double, _FloatN and _FloatNx.

* The __STDC_IEC_60559_BFP__ and __STDC_IEC_60559_COMPLEX__ macros are
  predefined as specified in TS 18661-1:2014.

* The exp10 functions in <math.h> now have a corresponding type-generic
  macro in <tgmath.h>.

* The ISO C2X macro _PRINTF_NAN_LEN_MAX has been added to <stdio.h>.

Deprecated and removed features, and other changes affecting compatibility:

* The r_version update in the debugger interface makes the glibc binary
  incompatible with GDB binaries built without the following commits:

  c0154a4a21a gdb: Don't assume r_ldsomap when r_version > 1 on Linux
  4eb629d50d4 gdbserver: Check r_version < 1 for Linux debugger interface

  when audit modules or dlmopen are used.

* Intel MPX support (lazy PLT, ld.so profile, and LD_AUDIT) has been removed.

Changes to build and runtime requirements:

  [Add changes to build and runtime requirements here]

Security related changes:

  [Add security related changes here]

The following bugs are resolved with this release:

  [The release manager will add the list generated by
  scripts/list-fixed-bugs.py just before the release.]


Version 2.34

Major new features:

* In order to support smoother in-place-upgrades and to simplify
  the implementation of the runtime all functionality formerly
  implemented in the libraries libpthread, libdl, libutil, libanl has
  been integrated into libc.  New applications do not need to link with
  -lpthread, -ldl, -lutil, -lanl anymore.  For backwards compatibility,
  empty static archives libpthread.a, libdl.a, libutil.a, libanl.a are
  provided, so that the linker options keep working.  Applications which
  have been linked against glibc 2.33 or earlier continue to load the
  corresponding shared objects (which are now empty).  The integration
  of those libraries into libc means that additional symbols become